--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
-  "dependencies": {
-  },
+  "dependencies": {},
   "repository": "none",
   "devDependencies": {
+    "angular": "1.3.15",
+    "browserify": "^9.0.8",
+    "browserify-ngannotate": "^0.7.1",
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-cachebust": "0.0.5",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-install": "^0.4.0",
+    "gulp-jade": "^1.0.0",
+    "gulp-jshint": "^1.10.0",
+    "gulp-karma": "0.0.4",
+    "gulp-ng-html2js": "^0.2.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "gulp-webserver": "^0.9.0",
+    "gulp.spritesmith": "^3.5.3",
     "jquery": "2.1.1",
-    "angular": "1.3.15"
+    "karma": "^0.12.31",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
-  "optionalDependencies": {
-  }
+  "optionalDependencies": {}
 }
