--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "angular": "^1.3.15"
+  },
   "repository": "none",
   "devDependencies": {
-    "angular": "1.3.15",
+    "angular-mocks": "^1.3.15",
+    "angular-route": "^1.3.15",
     "browserify": "^9.0.8",
     "browserify-ngannotate": "^0.7.1",
     "del": "^1.1.1",
@@ -14,15 +17,19 @@
     "gulp-jade": "^1.0.0",
     "gulp-jshint": "^1.10.0",
     "gulp-karma": "0.0.4",
+    "gulp-livereload": "^3.8.0",
     "gulp-ng-html2js": "^0.2.0",
-    "gulp-sass": "^1.3.3",
+    "gulp-ruby-sass": "^1.0.1",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "gulp-webserver": "^0.9.0",
     "gulp.spritesmith": "^3.5.3",
+    "jasmine-core": "^2.2.0",
     "jquery": "2.1.1",
     "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
